add i18n support for ApiClientInfo module
Change-Id: Id7f1eb1945afecf5d4133d8d96133ff94ee71574

--- a/client/i18n/en.json
+++ b/client/i18n/en.json
@@ -16,6 +16,9 @@
 	"apihelp-query+pageterms-example-simple": "Get all terms associated with the page 'London', in the user language.",
 	"apihelp-query+pageterms-example-label-en": "Get labels and aliases associated with the page 'London', in English.",
 	"apihelp-query+pageterms-param-terms": "The kinds of terms to get, e.g. 'label', 'description', or 'alias'.",
+	"apihelp-query+wikibase-description": "Get information about the associated Wikibase repository.",
+	"apihelp-query+wikibase-example-1": "Get url path and other info for the Wikibase repo.",
+	"apihelp-query+wikibase-param-prop": "Which properties to get:\n;url: Base url, script path and article path.",
 	"wikibase-after-page-move": "You may also [$1 update] the associated {{WBREPONAME}} item to maintain language links on moved page.",
 	"wikibase-after-page-move-queued": "The [$1 {{WBREPONAME}} item] associated with this page will be automatically updated soon.",
 	"wikibase-after-page-delete": "You may also remove the link to this page from the associated [$1 {{WBREPONAME}} item] to maintain language links.",
