--- a/repo/i18n/en.json
+++ b/repo/i18n/en.json
@@ -33,10 +33,10 @@
 	"wikibase-entitytermsforlanguagelistview-description": "Description",
 	"wikibase-entitytermsforlanguagelistview-label": "Label",
 	"wikibase-entitytermsforlanguagelistview-language": "Language",
-	"wikibase-label-empty": "No label defined yet",
+	"wikibase-label-empty": "No label defined",
 	"wikibase-label-edit-placeholder": "enter a label",
 	"wikibase-label-edit-placeholder-language-aware": "enter a label in $1",
-	"wikibase-description-empty": "No description defined yet",
+	"wikibase-description-empty": "No description defined",
 	"wikibase-description-edit-placeholder": "enter a description",
 	"wikibase-description-edit-placeholder-language-aware": "enter a description in $1",
 	"wikibase-diffview-reference": "reference",
@@ -59,7 +59,7 @@
 	"wikibase-statements": "Statements",
 	"wikibase-terms": "In other languages",
 	"wikibase-sitelinkgroupview-input-help-message": "Add a site link by specifying a site and a page of that site, edit or remove existing site links.",
-	"wikibase-sitelinks-empty": "No page is linked to this item yet.",
+	"wikibase-sitelinks-empty": "No page is linked to this item.",
 	"wikibase-sitelinks-input-help-message": "Set a link to a page related to this item.",
 	"wikibase-sitelinks-special": "Other sites",
 	"wikibase-badgeselector-badge-placeholder-title": "Click to assign a badge.",
