--- a/repo/i18n/en.json
+++ b/repo/i18n/en.json
@@ -242,6 +242,10 @@
 	"wikibase-listdatatypes-intro": "This is a list of all data types available on this installation:",
 	"wikibase-history-title-with-label": "Revision history of \"$2\" ($1)",
 	"wikibase-history-title-without-label": "Revision history of ($1)",
+	"special-listproperties": "List of properties",
+	"wikibase-listproperties-legend": "Get a list of properties by data type",
+	"wikibase-listproperties-label-datatype": "Data type:",
+	"wikibase-listproperties-submit": "Find",
 	"special-entitieswithoutdescription": "Entities without description",
 	"wikibase-entitieswithoutdescription-legend": "Get list of entities without description",
 	"special-entitieswithoutlabel": "Entities without label",
