Create a new special page to list properties by data type
The new special page is called Special:ListProperties.
Queries can be done via the form or in the format
Special:ListProperties/dataType, eg Special:ListProperties/url.

Note: Split into Id9775659

Bug: T55618
Change-Id: I79a08ec87bf76adba869d4b7eb22098b41fbdb72

--- a/repo/i18n/en.json
+++ b/repo/i18n/en.json
@@ -242,6 +242,12 @@
 	"wikibase-listdatatypes-intro": "This is a list of all data types available on this installation:",
 	"wikibase-history-title-with-label": "Revision history of \"$2\" ($1)",
 	"wikibase-history-title-without-label": "Revision history of ($1)",
+	"special-listproperties": "List of properties",
+	"wikibase-listproperties-legend": "Get a list of properties by data type",
+	"wikibase-listproperties-datatype": "Data type:",
+	"wikibase-listproperties-all": "All data types",
+	"wikibase-listproperties-submit": "Find",
+	"wikibase-listproperties-invalid-datatype": "\"$1\" is not a valid data type.",
 	"special-entitieswithoutdescription": "Entities without description",
 	"wikibase-entitieswithoutdescription-legend": "Get list of entities without description",
 	"special-entitieswithoutlabel": "Entities without label",
