--- a/repo/i18n/en.json
+++ b/repo/i18n/en.json
@@ -240,6 +240,7 @@
 	"wikibase-dispatchstats-average": "Average",
 	"special-listdatatypes": "List of all data types available",
 	"wikibase-listdatatypes-intro": "This is a list of all data types available on this installation:",
+	"wikibase-listdatatypes-listproperties": "List of properties with this data type",
 	"wikibase-history-title-with-label": "Revision history of \"$2\" ($1)",
 	"wikibase-history-title-without-label": "Revision history of ($1)",
 	"special-listproperties": "List of properties",
